@@ -8469,6 +8469,11 @@ print_jit_stats (void)
 		g_print ("Used classes:           %ld\n", mono_stats.used_class_count);
 		g_print ("Static data size:       %ld\n", mono_stats.class_static_data_size);
 		g_print ("VTable data size:       %ld\n", mono_stats.class_vtable_size);
+
+		g_print ("\nGeneric instances:      %ld\n", mono_stats.generic_instance_count);
+		g_print ("Inflated methods:       %ld\n", mono_stats.inflated_method_count);
+		g_print ("Inflated types:         %ld\n", mono_stats.inflated_type_count);
+		g_print ("Generics metadata size: %ld\n", mono_stats.generics_metadata_size);
 	}
 }
 
